--- a/style.css
+++ b/style.css
@@ -178,19 +178,18 @@ footer {
 .map-container {
   margin-top: 60px;
 }
-#location {
-  padding-left: 0;
-  padding-right: 0;
-}
-
 .map-container iframe {
   width: 100%;
-  height: 650px;   /* Bigger map */
+  height: 650px;
   border: 0;
   border-radius: 12px;
   box-shadow: 0 0 40px rgba(255, 0, 0, 0.3);
 }
 
+#location {
+  padding-left: 0;
+  padding-right: 0;
+}
 .directions-btn {
   display: inline-block;
   margin-top: 30px;
