--- a/style.css
+++ b/style.css
@@ -232,3 +232,14 @@ footer {
     font-size: 36px;
   }
 }
+/* FORCE FULL WIDTH MAP */
+.map-full {
+  width: 100vw;
+  margin-left: calc(-50vw + 50%);
+}
+
+.map-full iframe {
+  width: 100%;
+  height: 700px;
+  display: block;
+}
