--- a/style.css
+++ b/style.css
@@ -256,3 +256,21 @@ footer {
   height: 700px;
   display: block;
 }
+/* FINAL LOCATION OVERRIDE */
+section#location {
+  padding-left: 0 !important;
+  padding-right: 0 !important;
+}
+
+section#location .map-container {
+  width: 100vw;
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+section#location iframe {
+  width: 100%;
+  height: 700px;
+  display: block;
+}
