--- a/style.css
+++ b/style.css
@@ -242,3 +242,20 @@ footer {
     height: 500px;
   }
 }
+/* ===== LOCATION FULL WIDTH MAP ===== */
+#location {
+  padding: 120px 0;
+  border-bottom: 1px solid #111;
+}
+
+#location .location-content {
+  padding: 0 8%;
+  text-align: center;
+}
+
+#location iframe {
+  width: 100%;
+  height: 650px;
+  border: 0;
+  display: block;
+}
