--- a/style.css
+++ b/style.css
@@ -71,7 +71,15 @@ nav a:hover {
   height: 100%;
   z-index: -1;
 }
-
+.slideshow::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,0.6);
+  top: 0;
+  left: 0;
+}
 .slideshow img {
   position: absolute;
   width: 100%;
